src/client/app.css
:root {
  --main-dark-blue: #2d3f53;
  --main-light-blue: #95afbf;
  --main-btn-color: #cf4532;
  --main-btn-focus-color: #a73727;
  --main-beige-color: #e9e2d3;
  --main-bg-color: #f6f4f2;
}

.test-div {
  padding-bottom:66%;
  background:#EEE;
  height:0;
  position:relative;
}
.test-image {
  width:100%;
  height:100%;
  display:block;
  position:absolute;
}

.entryBox {
  width: 30%;
  min-width: 270px;
}

.centered {
  float: none;
  margin: 0 auto;
  text-align: center;
}

.margin-top-50 {
  margin-top: 50px;
}

.btn-link {
  padding: 0;
}

.landing-outer {
  background-color: black;
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  margin: 0;
  padding: 0;
}

.landing-header {
  z-index: 1;
  position: relative;
  text-align: center;
  padding-top: 25vh;
}

.landing-header h1 {
  color: #fff;
  text-shadow: 2px 2px 4px rgba(0,0,0,0.28);
}

.slideshow { 
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 0;
  list-style: none;
  margin: 0;
  padding: 0;
}

.slideshow li { 
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background-size: cover;
  background-position: 50% 50%;
  background-repeat: no-repeat;
  opacity: 0;
  z-index: 0;
  animation: imageAnimation 50s linear infinite; 
}

.slideshow li:nth-child(1) { 
  background-image: url(https://res.cloudinary.com/eleerogers/image/upload/v1567127415/starry_camp_dq3dzc.jpg);
}
.slideshow li:nth-child(2) { 
  background-image: url(https://res.cloudinary.com/eleerogers/image/upload/v1566550279/campground3_ijvbxq.jpg);
  animation-delay: 10s; 
}
.slideshow li:nth-child(3) { 
  background-image: url(https://res.cloudinary.com/eleerogers/image/upload/v1566550277/campground7_nvgjpa.jpg);
  animation-delay: 20s; 
}
.slideshow li:nth-child(4) { 
  background-image: url(https://res.cloudinary.com/eleerogers/image/upload/v1566550275/campground5_jdaxgj.jpg);
  animation-delay: 30s; 
}
.slideshow li:nth-child(5) { 
  background-image: url(https://res.cloudinary.com/eleerogers/image/upload/v1566550274/campground4_pzeyad.jpg);
  animation-delay: 40s; 
}

@keyframes imageAnimation { 
  0% { 
    opacity: 0; 
    animation-timing-function: ease-in;
  }
  10% {
    opacity: 1;
    animation-timing-function: ease-out;
  }
  20% {
    opacity: 1
  }
  30% {
    opacity: 0
  }
}

/* Older browser support - .no-cssanimations class added by modernizr */
.no-cssanimations .slideshow li {
	opacity: 1;
}

.map {
  height: 400px;
  width: 100%;
  padding-left: 0;
  padding-right: 0;
}

.min-width {
  min-width: 1000px;
}

input {
  outline:none;
}

input[type="file"] {
  display: none;
}

.cover {
  object-fit: cover;
  width: 50px;
  height: 100px;
}

a:hover {
  text-decoration: none 
}

.images {
  background-size: cover;
}

.cover {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.km-button--primary {
  background-color: #5C5AA7;
  color: #FFFFFF;
}
.km-button {
  border-radius: 3px;
  -webkit-appearance: none;
  border: none;
  outline: none;
  background: transparent;
  height: 36px;
  padding: 0px 16px;
  margin: 0;
  font-size: 14px;
  font-weight: 400;
  text-align: center;
  min-width: 70px;
  transition: all 0.3s ease-out;
}
.km-btn-file {
  width: 0.1px;
    height: 0.1px;
    opacity: 0;
    overflow: hidden;
    position: absolute;
    z-index: -1;
}
.km-btn-file-label {
  line-height: 36px;
  cursor: pointer;
}

.Toastify__toast-container {
  width: 320px;
}
.Toastify__toast--default {
    background: #fff;
    color: #aaa;
 }
  .Toastify__toast--info {
    background: #3498db;
 }
  .Toastify__toast--success {
    background: #d4edda;
    color: #155724;
    border-color: #c3e6cb;
 }
  .Toastify__toast--warning {
    background: #f1c40f;
 }
  .Toastify__toast--error {
    background: #f8d7da;
    color: #721c24;
    border-color: #f5c6cb;
 }
 .Toastify__toast-container--top-right {
  top: 4.5em;
  right: 2em; 
}

.display-flex {
  display: flex !important;
  justify-content: center;
}

.search-form {
  width: 232.05px !important;
  justify-content: flex-end;
}

.campground { 
  min-height: 200px;
  visibility: visible;
  opacity: 1;
}

.transition {
  transition:opacity 1s linear;
}

.loading {
  /* visibility: hidden; */
  opacity: 0;
  /* display: none; */
}

.done {
  visibility: visible;
  opacity: 1;
}

.campgroundThumb {
  height: 165px;
  width: 240px;
  object-fit: cover;
}

.campgroundUserThumb {
  height: 111px;
  width: 153px;
  object-fit: cover;
  padding: 0;
}

.campgroundBtn {
  margin-top: 7px;
}

.navMinHeight {
  min-height: 70px;
}

.user-cg-box {
  margin-top: 55px;
}

.email-position {
  margin-top: 20px;
}

.user-edit-btn {
  margin-top: 10px;
}

.jumbotron {
  min-width: 265px;
  margin-bottom: 3rem;
  margin-top: 2rem;
  background-color: var(--main-dark-blue);
  color: var(--main-bg-color);
}

.vertical-center {
  margin: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.center-div {
  justify-content: center;
  padding-top: 2em;
  padding-bottom: 3em;
}

.loading-button {
  /* padding: 1rem 2rem; */
  /* font-size: 16px;
  color: #ffffff;
  font-weight: 600;
  border-radius: 6px;
  background-color: #2080df; */
}

.loading-button > div {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.loader {
  border: 4px solid rgba(255, 255, 255, 0.2);
  border-left: 4px solid;
  animation: load 1s infinite linear;
  border-radius: 50%;
  width: 25px;
  height: 25px;
}

@keyframes load {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.marginBtm {
  margin-bottom: 5em;
}

.keepTextSpacing {
  white-space: pre-line;
}

.inputTextBox {
  min-height: 39px;
}

.font-size-14 {
  font-size: 14px;
}

.footer-box {
  justify-content: end;
  display: flex;
}

.min-height-container {
  min-height: 100vh;
  margin-top: 2rem;
}

.text-align-center {
  text-align: center;
}

@media only screen and (max-width: 767px) {
  .campgroundUserThumb {
    height: auto;
    width: 85%;
    min-width: 225.25px;
  }

  .text-align-center {
    margin: auto;
  }

  .flex-dir-col-rev {
    flex-direction: column-reverse;
  }

  .form-control {
    display: inline-block !important;
  }
}

ul {
  padding-inline-start: 0;
}

.flex {
  display: flex;
}

.jumbotron {
  text-align: center;
}

.form-inline {
  display: block !important;
}

.btn-max-ht {
  margin: auto 0;
}

body {
  background-color: var(--main-bg-color);
  font-family: gtwalsheim,Avenir,-apple-system,system-ui,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;

  min-width: 378px;
}

.btn-orange {
  background-color: var(--main-btn-color);
  border-color: var(--main-btn-color);
}

.btn-orange:hover, .btn-orange:focus, .btn-orange:active {
  background-color: var(--main-btn-focus-color);
  border-color: var(--main-btn-focus-color);
  box-shadow: none;
  outline-offset: -2px !important;
}

.btn:focus {
  box-shadow: none !important;
}

.entryBox > .form-group > .btn-orange:active {
  background-color: var(--main-btn-focus-color);
  border-color: var(--main-btn-focus-color);
  box-shadow: none;
  outline-offset: -2px !important;
}

 #basic-navbar-nav > .ml-auto > .flex > .btn-orange:active {
  background-color: var(--main-btn-focus-color);
  border-color: var(--main-btn-focus-color);
  box-shadow: none;
  outline-offset: -2px !important;
}

div > .container > .container > .jumbotron > a > .btn-orange:active {
  background-color: var(--main-btn-focus-color);
  border-color: var(--main-btn-focus-color);
  box-shadow: none;
  outline-offset: -2px !important;
}

.background-blue {
  background-color: var(--main-light-blue) !important;
}

.background-beige {
  background-color: var(--main-beige-color) !important;
}

.nav-link-custom {
  display: block;
  padding: .5rem 1rem;
  color: rgba(0,0,0,.5);
}

.nav-link-custom:hover {
  color: rgba(0,0,0,.7);
}

.nav-link-custom:focus {
  color: rgba(0,0,0,.7);
}

.color-dark-blue {
  color: var(--main-dark-blue) !important;
}

.nav-link-custom:hover .color-dark-blue {
  font-weight: 500;
}

.nav-link-custom:focus .color-dark-blue {
  font-weight: 500;
}

.go-back-btn {
  color: var(--main-dark-blue);
}

.go-back-btn:hover, .go-back-btn:focus {
  color: var(--main-dark-blue);
  text-decoration: none;
  font-weight: 450;
}



.btn-outline-info {
  color: var(--main-dark-blue) !important;
  border-color: var(--main-dark-blue) !important;
  background-color: var(--main-bg-color) !important;
}

.btn-outline-info:hover, .btn-outline-info:active, .btn-outline-info:visited {
  background-color: var(--main-dark-blue) !important;
  color: var(--main-bg-color) !important;
}

.page-item.active .page-link {
  /* z-index: 1;
  color: #fff; */
  background-color: var(--primary);
  border-color: var(--primary);
}

.page-link {
  color: var(--primary);
}

.page-link:hover {
  color: var(--primary);
}

.limit-pic-size {
  height: 55px;
  width: 55px;
  margin: 5px 0;
}

.min-width-col {
  min-width: 150px;
  padding: 0 !important;
}

.btn-square {
  border-radius: 0 !important;
}

#basic-navbar-nav > .ml-auto > div > .padding-auto-0 {
  /* align-items: center;
  justify-content: center; */
  margin: auto 0;
}

.d-flex > .col {
  padding: 0;
}

.font-weight-500 {
  font-weight: 500;
}

.font-weight-600 {
  font-weight: 600;
}

.min-width-125 {
  min-width: 125px;
}

div > .figure > a > .img-thumbnail {
  padding: 0;
}

.contact-padding-top {
  padding-top: 27px;
}

.comment-padding-top {
  padding-top: 27px;
}

@media only screen and (max-width: 475px) {
  .dissapear-small {
    display: none;
  }
}

@media only screen and (max-width: 575px) {
  .comment-padding-top {
    padding-top: 60px;
  }

  .campgroundThumb {
    height: calc(100vw * .75);
    width: 100%;
    min-width: 378px;
    padding: 0;
    border: 0;
    border-radius: 0;
    min-width: 225.25px;
  }

  body > .root-outer > .app-outer > div > .mb-3 {
    margin-bottom: 0 !important;
  }

  .jumbotron {
    margin: 0;
    border-radius: 0;
    padding-top: 140px;
    padding-bottom: 70px;
  }

  .min-height-container {
    margin: 0;
  }

  .container {
    padding: 0;
  }

  .navbar-styles {
    position: fixed;
    width: 100%;
    z-index: 10;
  }

  .navbar-page-styles {
    width: 100%;
    z-index: 10;
  }

  .container > .container > .row > div {
    margin: 0;
    padding: 0;
  }

  div > .container > .container > .row {
    margin: 0;
  }

  /* .dissapear-small {
    display: none;
  } */

  .navbar-brand {
    margin: 0;
  }

  div > .container > div > .container > .container {
    min-width: 378px !important;
  }

  .contact-padding-top {
    padding-top: 60px;
  }

  body, html {
    overflow-x: hidden;
  }

  .row > .col-md-9 > .mb-3 {
    margin-bottom: 0 !important;
    border: 0 !important;
  }

  .root-outer > .app-outer > div > .mb-5 {
    margin-bottom: 0 !important;
  }
}

@media only screen and (min-width: 387px) { 
  .brnodisplay {
      display: none;
  }
}

@media only screen and (min-width: 576px) { 
  .brnodisplay-md {
      display: none;
  }
}

.nav-link-custom:hover .text-primary {
  color: #1d3750 !important;
}

.text-primary-hover:hover {
  color: #1d3750 !important;
  text-decoration: none !important;
  font-weight: 450;
}

.underline-hover:hover {
  text-decoration: underline;
}

.navbar-brand {
  padding-top: 1.15rem;
}

